# QtProjectSetup

./: .gitignore  InstallAndRun  InstallAndRunLinux.sh  InstallAndRunWindows.bat  README.md
ProjectCode/: .gitignore  CMakeLists.txt  CMakeLists.txt.in  DeploymentScriptWindows.bat
ProjectCode/ExecutableCode/: .gitignore  CMakeLists.txt  QtProject.cpp
ProjectCode/MainProjectLibrary/: .gitignore  CMakeLists.txt  Central3DWidget.cpp  Central3DWidget.h  CustomMainWindow.h  MainLib.h  OrbitTransformController.h  TestLibraryFunctionality.h  TimedOrbitTransformController.cpp  TimedOrbitTransformController.h  Widget3DContainer.cpp  Widget3DContainer.h  Widget3DControlCenter.cpp  Widget3DControlCenter.h  Window3DSubclass.cpp  Window3DSubclass.h
ProjectCode/MainProjectLibrary/util/: LabelSlider.cpp  LabelSlider.h
ProjectCode/TestLibrary/: .gitignore  CMakeLists.txt  LabelSliderTestFixture.h  LinkTest.cpp  QAppTestSetup.h  QtTestsUtil.cpp  TestLib.cpp  TestLinkLibrary.cpp
